ast/testdata/tests/errors/contracts/eof_after_if.rql
contract IfEOF() -> void {
    if x {

    }
